# statusbar-alarm-dbus-api

./: COPYING  autogen.sh  configure.ac
debian/: changelog  control  copyright  rules  statusbar-alarm-dev.files
src/: Makefile.am  clock-plugin-dbus.h  statusbar-alarm.pc.in
